<resources>
    <string name="app_name">StuntCare</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="create">First, let\’s create your account</string>
    <string name="registerGoogle">Register with Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="alreadyAccount">Already have an account\, Log in</string>
    <string name="inputEmail">Input your email</string>
    <string name="inputPassword">Input your password</string>
    <string name="inputPasswordAgain">Input your password again</string>
    <string name="termCondition">I agree with the terms of service and privacy policy</string>
    <string name="google">Register with Google</string>
    <string name="or">OR</string>
    <string name="registerr">Registerr</string>
    <string name="default_web_client_id" translatable="false">161975354193-gjue1on9noopf2277ull07enonpo39lh.apps.googleusercontent.com</string>
    <string name="welcome">Welcome to Stunt</string>
    <string name="enter">Enter your personal data now and get ready for the exciting surprises that StuntCare has for you!</string>
    <string name="fullName">Full name</string>
    <string name="inputName">Input your full name</string>
    <string name="birthday">Birthday</string>
    <string name="antiStunting">Anti Stunting</string>
    <string name="stunt">Stunt</string>
    <string name="care">Care</string>
    <string name="anti">Anti-Stunting</string>
    <string name="inputYourData">Input your data and let the apps recomend your daily pregnancy needs.</string>
    <string name="inputData">Input Data</string>
    <string name="dailyUpdates">Daily Updates</string>
    <string name="weight">Weight</string>
    <string name="beforePregnat">Before Pregnant</string>
    <string name="now">Now</string>
    <string name="kilogram">Kilogram</string>
    <string name="historyOfIllness">History of illness</string>
    <string name="next">Next</string>
    <string name="lastMenstrualPeriod">Last Menstrual Period</string>
    <string name="pleaseInput">Please input the first day of your last menstrual period to find out the estimated due date of your baby.</string>
    <string name="date">Date</string>
    <string name="prePregnancyWeight">Pre-pregnancy weight</string>
    <string name="inputyourprepregnancy">Please input your pre-pregnancy weight to help us provide a more accurate health and nutrition plan during your pregnancy journey.</string>
    <string name="postPregnancy">Post-pregnancy weight</string>
    <string name="inputpostpregnancy">Please input your post-pregnancy weight to help us provide a more accurate health and nutrition plan during your post-pregnancy journey.</string>
    <string name="inputIllnes">Please select or input your history of illness to help us provide a more accurate health and nutrition plan during your healthcare journey.</string>
    <string name="text">where you can obtain expert pregnancy advice on diet, exercise, precautions, and specific needs</string>
    <string name="antistunting2text">Estimated date of birth</string>
    <string name="recom">Recomendation Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Update your recommendations</string>
    <string name="logout">Log out</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_detail">Profile picture, name, email, date of birth</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_detail">Customize your notifications preference</string>
    <string name="language">Language</string>
    <string name="language_detail">Change your language preference</string>
    <string name="faq">FAQ</string>
    <string name="faq_detail">Your questions, our answer</string>
    <string name="help_support">Help and Support</string>\
    <string name="help_support_detail">Always here to assist you</string>
    <string name="logout_text">Are you sure want to logout?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_logout">Logout</string>
    <string name="factMyths">Facts &amp; Myths</string>
    <string name="detail">See Details</string>
    <string name="allergy">Allergy</string>
    <string name="no_data">No data</string>
    <string name="coming">Coming</string>
    <string name="Soon">Soon</string>
</resources>