<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="108dp"
        android:layout_height="131dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/confirmPassword"
        android:textColor="@color/text_color_register"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:background="@drawable/button"
        android:ems="10"
        android:hint="@string/inputPasswordAgain"
        android:inputType="textPassword"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="@color/text_color_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"/>

    <!--        android:logiClickable = "false" />-->

    <!--    <Button-->
    <!--        android:id="@+id/btnRegGoogle"-->
    <!--        android:layout_width="297dp"-->
    <!--        android:layout_height="48dp"-->
    <!--        android:backgroundTint="@color/white"-->
    <!--        android:backgroundTintMode="@drawable/button"-->
    <!--        android:text="@string/google"-->
    <!--        android:textColor="@color/text_color_register"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/textView7" />-->

    <ImageButton
        android:id="@+id/showHidePassword2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="Show/Hide Password"
        app:layout_constraintEnd_toEndOf="@+id/editTextText3"
        app:layout_constraintTop_toTopOf="@+id/editTextText2"
        app:srcCompat="@drawable/baseline_visibility_off_24" />

    <!--        app:layout_constraintTop_toBottomOf="@+id/btnRegGoogle" />-->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/alreadyAccount"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <Button
        android:id="@+id/button"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_id" />

    <CheckBox
        android:id="@+id/check_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/termCondition"
        android:textSize="10sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:background="@drawable/button"
        android:ems="10"
        android:hint="@string/inputPassword"
        android:inputType="textPassword"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="@color/text_color_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <!--        android:logiClickable = "false" />-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Input your email"-->
<!--        app:passwordToggleEnabled="true"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:inputType="textPassword"-->

    <ImageButton
        android:id="@+id/showHidePassword1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="Show/Hide Password"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:layout_constraintTop_toTopOf="@+id/editTextText"
        app:srcCompat="@drawable/baseline_visibility_off_24" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:background="@drawable/button"
        android:ems="10"
        android:hint="@string/inputEmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingBottom="0dp"
        android:textColor="@color/text_color_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/create"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/text_color_register"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/register"
        android:textColor="@color/text_color_register"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/password"
        android:textColor="@color/text_color_register"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="10sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="297dp"
        android:layout_height="48dp"
        android:text="@string/registerGoogle"
        android:textColorLink="@color/text_color_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</androidx.constraintlayout.widget.ConstraintLayout>
