<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stuntcare.PersonalData1">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="108dp"
        android:layout_height="131dp"
        android:layout_marginStart="143dp"
        android:layout_marginTop="151dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="233dp"
        android:layout_height="28dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="402dp"
        android:text="@string/welcome"
        android:textColor="@color/text_color_register"
        android:fontFamily="@font/poppins_bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="438dp"
        android:text="@string/enter"
        android:textColor="@color/text_color_register"
        android:fontFamily="@font/poppins_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="80dp"
        android:layout_height="22dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="522dp"
        android:text="@string/fullName"
        android:textColor="@color/text_color_register"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="297dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="552dp"
        android:background="@drawable/button"
        android:ems="10"
        android:hint="@string/inputName"
        android:inputType="text"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textColor="@color/text_color_register"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="614dp"
        android:text="@string/birthday"
        android:textColor="@color/text_color_register"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>